--- a/Views/ApplicationType/Index.cshtml
+++ b/Views/ApplicationType/Index.cshtml
@@ -1,6 +1,44 @@
-﻿@model Rocky.Models.ApplicationType
-@{
-    ViewData["Title"] = "Index";
-}
+﻿@model IEnumerable<Rocky.Models.ApplicationType>
 
-<h1>Index</h1>
+<div class="container p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary">ApplicationType List</h2>
+        </div>
+        <div class="col-6 text-right">
+            <a asp-controller="ApplicationType" asp-action="Create" class="btn btn-primary">
+                Create New Application
+            </a>
+        </div>
+    </div>
+
+    <br /> <br />
+    @if (Model.Count() > 0)
+    {
+        <table class="table table-bordered table-striped" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Aplication Name</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var obj in Model)
+                {
+                    <tr>
+                        <td width="50%">@obj.Name</td>
+                        <td></td>
+                    </tr>
+                }
+            </tbody>
+
+        </table>
+
+    }
+    else
+    {
+        <p>No ApplicationType Exist.</p>
+    }
+
+
+</div>
