--- a/Views/Category/Index.cshtml
+++ b/Views/Category/Index.cshtml
@@ -29,7 +29,16 @@
                 <tr>
                     <td width="50%">@obj.Name</td>
                     <td width="30%">@obj.DisplayOrder</td>
-                    <td></td>
+                    <td class="text-center">
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-primary">
+                                Edit
+                            </a>
+                            <a asp-controller="Category" asp-route-Id="@obj.Id" asp-action="Delete" class="btn btn-danger">
+                                Delete
+                            </a>
+                        </div>
+                    </td>
                 </tr>
                 }
             </tbody>
