Application type Excercise of add Validation and crud functionality.

--- a/Views/ApplicationType/Create.cshtml
+++ b/Views/ApplicationType/Create.cshtml
@@ -13,6 +13,7 @@
                 </div>
                 <div class="col-8">
                     <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
 
             </div>
@@ -36,4 +37,9 @@
 
 </form>
 
-
+@section Scripts
+{
+ @{ 
+      <partial name="_ValidationScriptsPartial" /> 
+  }
+}
