--- a/Views/ApplicationType/Index.cshtml
+++ b/Views/ApplicationType/Index.cshtml
@@ -1,44 +1,55 @@
 ﻿@model IEnumerable<Rocky.Models.ApplicationType>
 
-<div class="container p-3">
-    <div class="row pt-4">
-        <div class="col-6">
-            <h2 class="text-primary">ApplicationType List</h2>
+<div class="container border 2px">
+    <div class="p-3">
+        <div class="row pt-4">
+            <div class="col-6">
+                <h2 class="text-primary">ApplicationType List</h2>
+            </div>
+            <div class="col-6 text-right">
+                <a asp-controller="ApplicationType" asp-action="Create" class="btn btn-primary">
+                    Create New Application
+                </a>
+            </div>
         </div>
-        <div class="col-6 text-right">
-            <a asp-controller="ApplicationType" asp-action="Create" class="btn btn-primary">
-                Create New Application
-            </a>
-        </div>
-    </div>
 
-    <br /> <br />
-    @if (Model.Count() > 0)
-    {
-        <table class="table table-bordered table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>Aplication Name</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var obj in Model)
-                {
+        <br /> <br />
+        @if (Model.Count() > 0)
+        {
+            <table class="table table-bordered table-striped" style="width:100%">
+                <thead>
                     <tr>
-                        <td width="50%">@obj.Name</td>
-                        <td></td>
+                        <th>Aplication Name</th>
+                        <th>Edit and delete</th>
                     </tr>
-                }
-            </tbody>
+                </thead>
+                <tbody>
+                    @foreach (var obj in Model)
+                    {
+                        <tr>
+                            <td width="50%">@obj.Name</td>
+                            <td class="text-center">
+                                <div class="w-75 btn-group" role="group">
+                                    <a asp-route-Id="@obj.Id" asp-action="Edit" class="btn btn-primary">
+                                        <i class="fa-solid fa-pen-to-square"></i>  Edit
+                                    </a>
+                                    <a asp-route-Id="@obj.Id" asp-action="Delete" class="btn btn-danger">
+                                        <i class="fa-solid fa-trash"></i>  Delete
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
 
-        </table>
+            </table>
 
-    }
-    else
-    {
-        <p>No ApplicationType Exist.</p>
-    }
+        }
+        else
+        {
+            <p>No ApplicationType Exist.</p>
+        }
 
 
+    </div>
 </div>
